--- a/VirtoCommerce.Platform.Web/Web.config
+++ b/VirtoCommerce.Platform.Web/Web.config
@@ -27,7 +27,7 @@
         <add name="VirtoCommerce" connectionString="Data Source=(local);Initial Catalog=VirtoCommerce2;Persist Security Info=True;User ID=virto;Password=virto;MultipleActiveResultSets=True;Connect Timeout=420" providerName="System.Data.SqlClient" />
         <!-- Assets Connection String -->
         <!--<add name="AssetsConnectionString" connectionString="provider=AzureBlobStorage;DefaultEndpointsProtocol=https;AccountName=yourAccountName;AccountKey=yourAccountKey" />-->
-        <add name="AssetsConnectionString" connectionString="provider=LocalStorage;rootPath=~/App_Data/Assets;publicUrl=http://localhost/admin/assets" />
+      <add name="AssetsConnectionString" connectionString="provider=LocalStorage;rootPath=~/App_Data/Assets;publicUrl=http://68.45.179.8/admin/assets" />
     </connectionStrings>
     <appSettings>
         <add key="vs:EnableBrowserLink" value="false" />
